infra/k8s/common/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketshop.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-cluster-ip-srv
              servicePort: 5000
          - path: /api/tickets
            backend:
              serviceName: ticket-cluster-ip-srv
              servicePort: 6000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
